syntax = "proto3";

package pcbook;

option go_package = "pcbook/pb";

message Screen {
  // nested message since Resolution only apply to screens
  message Resolution {
    uint32 width = 1;
    uint32 heigh = 2;
  }

  // panel also applies only to screens
  enum Panel {
    UNKNOWN = 0;
    IPS = 1;
    OLED = 2;
  }

  float size_inch = 1;
  Resolution resolution = 2;
  Panel panel = 3;
  bool multitouch = 4;
}